#1 поддержка Spring AI v1.0.0